CPG-DEV/src/objects/Business__c.object
<CustomObject>
    <fields>
        <fullName>BusinessID__c</fullName>
        <description>This is the custom object named &quot;Business Unit Name&quot;</description>
        <label>Business ID</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BusinessUnitAlias__c</fullName>
        <globalPicklist>CargillBusinessAlias</globalPicklist>
        <label>Business Alias</label>
        <required>true</required>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CargillEnterprise__c</fullName>
        <globalPicklist>Cargill_Enterprise</globalPicklist>
        <label>Cargill Enterprise</label>
        <required>true</required>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CargillGroup__c</fullName>
        <globalPicklist>Cargill_Group</globalPicklist>
        <label>Cargill Group</label>
        <required>true</required>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>LegacyRecordID__c</fullName>
        <label>Legacy Record ID</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <label>Business</label>
    <nameField>
        <label>Business Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Business</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>